# hitsz_apriltags_ros

./: README.md
apriltags_ros/apriltags/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
apriltags_ros/apriltags/src/: UnionFindSimple.cc.autosave
apriltags_ros/apriltags_ros/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
apriltags_ros/apriltags_ros/include/apriltags_ros/: apriltag_detector.h  apriltag_detector.h~
apriltags_ros/apriltags_ros/src/: apriltag_detector.cpp  apriltag_detector.cpp~  apriltag_detector_hit.cpp~  apriltag_detector_node.cpp~  apriltag_detector_node_hit.cpp~  apriltag_detector_nodelet.cpp~
apriltags_ros/ethz_apriltag2/: CMakeLists.txt~
apriltags_ros/ethz_apriltag2/include/AprilTags/: TagDetector.h~
camera_umd/uvc_camera/src/: camera.cpp
uvc_test_main/: CMakeLists.txt  aptiltags_cpplib_guid.txt  example.yaml  example.yaml~  package.xml
uvc_test_main/launch/: cameraLaunch.launch~  tags.launch  uvc_apriltags.launch  uvc_apriltags.launch~
uvc_test_main/src/: result_subscriber.cpp  result_subscriber.cpp~
