<?xml version="1.0"?>
<package>
  <name>uvc_apriltags_test</name>
  <version>0.0.0</version>
  <description>The uvc_apriltags_test package</description>

  <maintainer email="10515668@qq.com">Linxufang</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>uvc_camera</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>apriltags_ros</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>uvc_camera</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>apriltags_ros</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
